@@ -1,3 +1,8 @@
+2001-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* lisp/message.el (message-send): Remove the text property `field'
+	from the encoding buffer.
+
 2001-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* lisp/gnus-start.el (gnus-re-read-newsrc-el-file): Use
